// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`account.changeAvatar > functionality > avatar changes to a given image 1`] = `
{
  "updated": {
    "accounts": {
      "id:09ca8fd7-b571-45a3-9a2f-0aec2f32c47a": {
        "avatarUrl": "https://fake-endpoint.org/test-bucket/avatars/09ca8fd7-b571-45a3-9a2f-0aec2f32c47a.png?lastModified=1577836800000",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`account.changeAvatar > functionality > avatar changes to null 1`] = `
{
  "updated": {
    "accounts": {
      "id:111fae5d-5adc-4a50-a691-b9235e73cda8": {
        "avatarUrl": null,
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;
